--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<html><head><style>#a{border: 1px solid;position:fixed;padding-left:200px;padding-right:200px;left:-20px;min-width:1550px;top:-1px;}#a a{padding-left:100px;padding-right:100px;float:left;position:relative;top:20px;}</style>
-  </head><body><div id=a>
+<style>#a{border: 1px solid;position:fixed;padding-left:200px;padding-right:200px;left:-20px;min-width:1550px;top:-1px;}#a a{padding-left:100px;padding-right:100px;float:left;position:relative;top:20px;}</style>
+<div id=a>
 <a href="/multimedia">Multimedia</a>
 <a href="/games">Games!</a>
 <h1 style="float:left;position:relative;bottom:10px;">AsexualReproduction.GitHub.Io</h1>
@@ -96,5 +96,3 @@ a.arc(100, 30, 20, 0, 2 * Math.PI);
 a.stroke();
 
 </script>
-  </body>
-  </html>
