--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<style>#a{border: 1px solid;position:fixed;padding-left:200px;padding-right:200px;left:-20px;min-width:1550px;top:-1px;}#a a{padding-left:100px;padding-right:100px;float:left;position:relative;top:20px;}</style>
+<style>#a{z-index:5;background:#FFFFFF;border: 1px solid;position:fixed;padding-left:200px;padding-right:200px;left:-20px;min-width:1550px;top:-1px;}#a a{padding-left:100px;padding-right:100px;float:left;position:relative;top:20px;}</style>
 <div id=a>
 <a href="/multimedia">Multimedia</a>
 <a href="/games">Games!</a>
@@ -13,86 +13,22 @@
 <table><thead><tr>
 <th><canvas id="canvas">Your Browser Doesn't Support the Canvas Tag</canvas></th>
 <th><canvas id="canvas2">Your Browser Doesn't Support the Canvas Tag</canvas></th>
-<th><canvas id="canvas3" style="position:relative;left:30px;">Your Browser Doesn't Support the Canvas Tag</canvas></th>
+<th><canvas id="canvas3"> style="position:relative;left:30px;">Your Browser Doesn't Support the Canvas Tag</canvas></th>
 <th><canvas id="canvas4">Your Browser Doesn't Support the Canvas Tag</canvas></th>
 </tr><tbody><tr>
 <td><a href="games/binaryfission">Binary Fission Confusion!</a></td>
 <td><a href="games/budding">Best Budding Buddies!</a></td>
 <td><a href="games/plant">The Vegetative Reproduction's Function</a></td>
-<td><a href="games/fragmentation">A Broken Life!</a></td>
+<td><a href="games/fragmentation">From Pieces to Stars!</a></td>
+</table><hr>
+<p><font size=6><u>Multimedia</u></font></p><hr>
+<table style="padding:10px;"><thead><tr>
+<th><img alt="Bacteria Image."></th><th><canvas id="gif">Your Browser Doesn't Support the Canvas Tag</canvas></th></tr></thead><tbody><tr><td>
+<a href="/multimedia/video">Bacteria Reproduction!</a></td>
+<td><a href="multimedia/gif">Vegetative Reproduction GIF!</a></td></tr></tbody>
+</table>
 </div>
 <script>
-var a=document.getElementById('canvas3').getContext('2d')
-a.beginPath();
-a.lineWidth = "5";
-a.strokeStyle = "green";
-a.moveTo(100, 140);
-a.lineTo(100, 50);
-a.stroke();
-
-a.beginPath();
-a.lineWidth = "5";
-a.moveTo(100, 90);
-a.lineTo(120, 80);
-a.stroke();
-
-a.beginPath();
-a.lineWidth = "5";
-a.moveTo(120, 80);
-a.lineTo(140, 60);
-a.stroke();
-
-a.beginPath();
-a.lineWidth = "5";
-a.moveTo(140, 60);
-a.lineTo(150, 70);
-a.stroke();
-
-a.beginPath();
-a.lineWidth = "5";
-a.moveTo(150, 70);
-a.lineTo(140, 80);
-a.stroke();
-
-a.beginPath();
-a.lineWidth = "5";
-a.moveTo(140, 80);
-a.lineTo(120, 80);
-a.stroke();
-
-a.beginPath();
-a.lineWidth = "5";
-a.moveTo(100, 90);
-a.lineTo(120, 80);
-a.stroke();
-
-a.beginPath();
-a.lineWidth = "5";
-a.moveTo(100, 90);
-a.lineTo(60, 60);
-a.stroke();
-
-a.beginPath();
-a.lineWidth = "5";
-a.moveTo(60, 60);
-a.lineTo(50, 70);
-a.stroke();
-
-a.beginPath();
-a.lineWidth = "5";
-a.moveTo(50, 70);
-a.lineTo(60, 80);
-a.stroke();
-
-a.beginPath();
-a.lineWidth = "5";
-a.moveTo(60, 80);
-a.lineTo(90, 80);
-a.stroke();
-
-a.beginPath();
-a.strokeStyle="orange"
-a.arc(100, 30, 20, 0, 2 * Math.PI);
-a.stroke();
+var a=document.getElementById('canvas3').getContext('2d');a.beginPath();a.strokeStyle="green";a.lineWidth=5;a.moveTo(100,140);a.lineTo(100,50);a.stroke();a.beginPath();a.moveTo(100, 90);a.lineTo(120,80);a.stroke();a.beginPath();a.moveTo(120,80);a.lineTo(140,60);a.stroke();a.beginPath();a.moveTo(140,60);a.lineTo(150,70);a.stroke();a.beginPath();a.moveTo(150,70);a.lineTo(140,80);a.stroke();a.beginPath();a.moveTo(140,80);a.lineTo(120,80);a.stroke();a.beginPath();a.moveTo(100,90);a.lineTo(120,80);a.stroke();a.beginPath();a.moveTo(100,90);a.lineTo(60,60);a.stroke();a.beginPath();a.moveTo(60,60);a.lineTo(50,70);a.stroke();a.beginPath();a.moveTo(50,70);a.lineTo(60,80);a.stroke();a.beginPath();a.moveTo(60,80);a.lineTo(90,80);a.stroke();a.beginPath();a.strokeStyle="orange";a.arc(100, 30, 20, 0, 2 * Math.PI);a.stroke();var d=document.getElementById('canvas4').getContext('2d');d.strokeStyle="orange";d.beginPath();d.lineWidth="5";d.moveTo(100, 80);d.lineTo(80, 40);d.stroke();d.moveTo(80, 40);d.lineTo(60, 80);d.stroke();d.beginPath();d.beginPath();d.moveTo(60, 80);d.lineTo(20, 80);d.stroke();d.beginPath();d.moveTo(20,80);d.lineTo(55,100);d.stroke();d.beginPath();d.moveTo(55,100);d.lineTo(35,140);d.stroke();d.beginPath();d.moveTo(35,140);d.lineTo(80,100);d.stroke();d.beginPath();d.moveTo(80,100);d.lineTo(125,140);d.stroke();d.beginPath();d.moveTo(125,140);d.lineTo(105, 100);d.stroke();d.beginPath();d.moveTo(105,100);d.lineTo(145,80);d.stroke();d.beginPath();d.moveTo(145,80);d.lineTo(100,80);d.stroke();var c=document.getElementById('gif').getContext('2d');c.beginPath();c.strokeStyle="green";c.lineWidth=5;c.moveTo(100,140);c.lineTo(100,50);c.stroke();c.beginPath();c.moveTo(100, 90);c.lineTo(120,80);c.stroke();c.beginPath();c.moveTo(120,80);c.lineTo(140,60);c.stroke();c.beginPath();c.moveTo(140,60);c.lineTo(150,70);c.stroke();c.beginPath();c.moveTo(150,70);c.lineTo(140,80);c.stroke();c.beginPath();c.moveTo(140,80);c.lineTo(120,80);c.stroke();c.beginPath();c.moveTo(100,90);c.lineTo(120,80);c.stroke();c.beginPath();c.moveTo(100,90);c.lineTo(60,60);c.stroke();c.beginPath();c.moveTo(60,60);c.lineTo(50,70);c.stroke();c.beginPath();c.moveTo(50,70);c.lineTo(60,80);c.stroke();c.beginPath();c.moveTo(60,80);c.lineTo(90,80);c.stroke();c.beginPath();c.strokeStyle="orange";c.arc(100, 30, 20, 0, 2 * Math.PI);c.stroke();
 
 </script>
