--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <style>#a{z-index:5;background:#FFFFFF;border: 1px solid;position:fixed;padding-left:200px;padding-right:200px;left:-20px;min-width:1550px;top:-1px;}#a a{padding-left:100px;padding-right:100px;float:left;position:relative;top:20px;}</style>
 <div id=a>
-<a href="/multimedia">Multimedia</a>
-<a href="/games">Games!</a>
+<a href="/multimedia.html">Multimedia</a>
+<a href="/games.html">Games!</a>
 <h1 style="float:left;position:relative;bottom:10px;">AsexualReproduction.GitHub.Io</h1>
-<a href="/movies">Movies</a>
-<a href="/quiz">Quiz</a>
+<a href="/movies.html">Movies</a>
+<a href="/quiz.html">Quiz</a>
 </div>
 <div style="position:relative;top:100px;">
 <p><font size=6><u>Games!</u></font></p>
